# ResearchCamp4

./: .gitignore  .gitmodules
others/tools/: open_terminals.sh
others/udev_rules/: 50-youbot-devices.rules
raw_calibration/: stack.xml
raw_calibration/raw_kinect_calibration/: mainpage.dox  manifest.xml
raw_command_tools/: stack.xml
raw_command_tools/raw_script_server/: .gitignore  mainpage.dox  manifest.xml
raw_command_tools/raw_script_server/action/: State.action
raw_command_tools/raw_script_server/launch/: script_server.launch
raw_command_tools/raw_script_server/src/: script_server.py  script_server_test.py  simple_script_server.py
raw_command_tools/raw_teleop/: CMakeLists.txt  mainpage.dox  manifest.xml
raw_common/: stack.xml
raw_common/raw_description/: mainpage.dox  manifest.xml
raw_common/raw_description/controller/: base_odometry.yaml
raw_common/raw_msgs/: .gitignore  mainpage.dox  manifest.xml
raw_common/raw_msgs/msg/: Object.msg  ObjectList.msg
raw_common/raw_srvs/: .gitignore  mainpage.dox  manifest.xml
raw_common/raw_srvs/srv/: GetDominantPlane.srv  GetObjects.srv
raw_common/raw_tools/: mainpage.dox  manifest.xml
raw_drivers/: stack.xml
raw_drivers/raw_simulated_kinect/: manifest.xml  nodelet_plugins.xml
raw_drivers/raw_usb_cam/: mainpage.dox  manifest.xml
raw_environments/: stack.xml
raw_environments/raw_default_env_config/: mainpage.dox  manifest.xml  upload_param.launch
raw_environments/raw_default_env_config/brsu-home/: map.pgm  map.yaml  navigation_goals.yaml  simulation_object_locations.yaml
raw_environments/raw_default_env_config/xpero_lab/: navigation_goals.yaml
raw_environments/raw_gazebo_worlds/: manifest.xml
raw_manipulation/: stack.xml
raw_manipulation/raw_arm_navigation/: .gitignore  mainpage.dox  manifest.xml
raw_manipulation/raw_arm_navigation/action/: MoveToCartesianPose.action  MoveToJointConfiguration.action
raw_manipulation/raw_simple_pick/: mainpage.dox  manifest.xml
raw_navigation/: stack.xml
raw_navigation/raw_2dnav/: mainpage.dox  manifest.xml
raw_navigation/raw_2dslam/: mainpage.dox  manifest.xml
raw_navigation/raw_local_planner/: CMakeLists.txt  blp_plugin.xml  mainpage.dox  manifest.xml
raw_navigation_experimental/: manifest.xml  stack.xml
raw_navigation_experimental/raw_2dnav_experimental/: mainpage.dox  manifest.xml
raw_navigation_experimental/raw_local_planner_omnidirectional/: .gitignore  CMakeLists.txt  blp_plugin.xml  mainpage.dox  manifest.xml
raw_navigation_experimental/raw_move_spiral/: mainpage.dox  manifest.xml
raw_navigationexperimental/: mainpage.dox
raw_navigationexperimental/nodes/: demo_navexp.py
raw_object_perception/: stack.xml
raw_object_perception/raw_blob_detection/: CMakeCache.txt  CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
raw_object_perception/raw_object_finder/: CMakeLists.txt  mainpage.dox  manifest.xml
raw_object_perception/raw_object_finder/ros/include/: CObjectCandidateExtraction.h  object_candidate_extraction.h  object_segmentation.h  plane_extraction.h  struct_planar_surface.h  toolbox_ros.h
raw_object_perception/raw_object_finder/ros/launch/: objectCandidateExtraction3D_node.launch  object_segmentation.launch  openni_camera.launch
raw_object_perception/raw_object_finder/ros/src/: CToolBoxROS.cpp  objectCandidateExtraction3D_node.cpp  object_candidate_extraction.cpp  object_segmentation.cpp  plane_extraction.cpp  toolbox_ros.cpp
raw_object_perception/raw_object_finder/ros/src/nodes/: object_segmentation_node.cpp
raw_object_perception/raw_scene_segmentation/: CMakeLists.txt  manifest.xml
raw_object_perception/raw_scene_segmentation/ros/include/: aliases.h  dominant_plane_extractor.h  organized_dominant_plane_extractor.h  ransac_dominant_plane_extractor.h  tabletop_cluster_extractor.h
raw_object_perception/raw_scene_segmentation/ros/launch/: dominant_plane_extractor.launch
raw_object_perception/raw_scene_segmentation/ros/src/: dominant_plane_extractor.cpp  organized_dominant_plane_extractor.cpp  ransac_dominant_plane_extractor.cpp  tabletop_cluster_extractor.cpp
raw_object_perception/raw_scene_segmentation/ros/src/nodes/: dominant_plane_extractor_node.cpp
raw_robots/: stack.xml
raw_robots/raw_bringup/: mainpage.dox  manifest.xml
raw_robots/raw_default_robot_config/: mainpage.dox  manifest.xml  upload_param.launch
raw_robots/raw_hardware_config/: mainpage.dox  manifest.xml
raw_scenarios/: stack.xml
raw_scenarios/raw_fetch_and_carry/: mainpage.dox  manifest.xml
raw_scenarios/raw_grri_demo/: mainpage.dox  manifest.xml
raw_simulation/: stack.xml
raw_simulation/raw_bringup_sim/: mainpage.dox  manifest.xml
raw_simulation/raw_gazebo_objects/: mainpage.dox  manifest.xml
raw_simulation/raw_gazebo_worlds/: mainpage.dox
raw_simulation/raw_simulated_kinect/: CMakeLists.txt  mainpage.dox
tools/: open_terminals.sh
yb_navigation/yb_base_local_planner/: point_grid
yb_navigation/yb_fake_localization/: fake_localization
yb_navigation/yb_navfn/: navtest
youbot_command_tools/: stack.xml
youbot_command_tools/youbot_teleop/: mainpage.dox  manifest.xml
youbot_common/: stack.xml
youbot_common/youbot_msgs/: mainpage.dox  manifest.xml
youbot_common/youbot_srvs/: mainpage.dox  manifest.xml
youbot_environments/: stack.xml
youbot_environments/youbot_default_env_config/: mainpage.dox  manifest.xml
youbot_navigation/: stack.xml
youbot_navigation/youbot_2dnav/: mainpage.dox  manifest.xml
youbot_navigation/youbot_2dslam/: mainpage.dox  manifest.xml
youbot_object_perception/: stack.xml
youbot_object_perception/youbot_object_finder/: mainpage.dox  manifest.xml
youbot_robots/: stack.xml
youbot_robots/youbot_bringup/: mainpage.dox  manifest.xml
youbot_robots/youbot_default_robot_config/: mainpage.dox  manifest.xml
youbot_scenarios/: stack.xml
youbot_scenarios/youbot_generic_states/: mainpage.dox  manifest.xml
youbot_scenarios/youbot_grri_demo/: mainpage.dox  manifest.xml
(+232 files in other folders)
